style.css
html,
body {
  background-color: #409080;
  color: #ffffff;
  font-size: large;
  margin: 0rem;
  padding-bottom: 4rem;
  padding: 0rem;
}

body > * {
  padding-left: 1rem;
  padding-right: 1rem;
}

h1,
p {
  font-size: 1rem;
  margin: 2rem auto;
  max-width: 30em;
}

h1 {
  font-size: 4rem;
  margin-bottom: 14rem;
  margin-top: 14rem;
  text-align: center;
}
h1 > span {
  display: inline-block;
  position: relative;
}
h1 > span > sub {
  font-size: 0.25em;
  left: 50%;
  opacity: 0.5;
  position: absolute;
  top: 4.5em;
  transform: translate(-50%, 0);
  white-space: nowrap;
}

.faint {
  opacity: 0.5;
}

.bigger {
  font-size: 1.5em;
}

a,
a:hover,
a:visited,
a:visited:hover {
  color: inherit;
  text-decoration: underline;
}

